# stepci

./: CLAUDE.md  Cargo.toml  README.md  install.sh
.github/workflows/: ci.yml  release.yml
docs/: demo.tape
docs/frontier/: stepci_wildground.md
examples/demo/: demo.yml  deploy.yml
src/: artifact.rs  cache.rs  diff.rs  envfile.rs  exec.rs  expr.rs  fetch.rs  lib.rs  main.rs  model.rs  parse.rs  secrets.rs  value.rs  wfcmd.rs
