[package]
name = "stepci"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A native, Dockerless debugger for GitHub Actions workflows — step through a run locally, see exactly what each step changed, with your real secrets."
repository = "https://github.com/adityasinha-ghub/stepci"
readme = "README.md"
keywords = ["github-actions", "ci", "debugger", "workflow", "devtools"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
# serde_yaml is archived upstream but remains the most battle-tested YAML
# deserializer; it's isolated behind `parse.rs` so it can be swapped later.
serde_yaml = "0.9"
# Ordered maps so jobs/steps/env keep file order (deterministic output).
indexmap = { version = "2", features = ["serde"] }
# For toJSON/fromJSON expression functions; preserve_order keeps object key order.
serde_json = { version = "1", features = ["preserve_order"] }
# Temp files for step scripts and the GITHUB_ENV/OUTPUT/PATH channels.
tempfile = "3"
# Recursive workspace walk for the per-step filesystem diff.
walkdir = "2"
# Glob matching for `upload-artifact` path patterns.
glob = "0.3"
# Shell-word splitting for service-container `options:` (quotes, health checks).
shlex = "1"
# SHA-256 for the `hashFiles()` expression function and cache keys.
sha2 = "0.10"

[profile.release]
strip = true
